bugfix: use nbsp instead of sp, this seems to fix the spacing issue around footer links...
... without htmlmin ' | ' worked fine, however once minified the spacing between links became 'Projects| Archive| etc|'

--- a/styles/main.css
+++ b/styles/main.css
@@ -148,7 +148,7 @@ footer dd {
 }
 
 footer dd:not(:last-child):after {
-    content: ' | ';
+    content: '\00a0|\00a0';
 }
 
 footer dd a{
